salesforce_sfdx/main/default/objects/Contact/fields/Contact_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_1__c</fullName>
    <label>* Contact Email (1)</label>
    <type>Email</type>
</CustomField>