salesforce_sfdx/main/default/objects/Contact/fields/Contact_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_2__c</fullName>
    <label>* Contact Email (2)</label>
    <type>Email</type>
</CustomField>