salesforce_sfdx/main/default/objects/Contact/fields/Contact_Email_4__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_4__c</fullName>
    <label>* Contact Email (4)</label>
    <type>Email</type>
</CustomField>