salesforce_sfdx/main/default/objects/Contact/fields/Contact_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_1__c</fullName>
    <label>* Contact Name (1)</label>
    <length>36</length>
    <type>Text</type>
</CustomField>