salesforce_sfdx/main/default/objects/Contact/fields/Contact_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_2__c</fullName>
    <label>* Contact Phone (2)</label>
    <type>Phone</type>
</CustomField>