salesforce_sfdx/main/default/objects/Contact/fields/Contact_Phone_5__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_5__c</fullName>
    <label>* Contact Phone (5)</label>
    <type>Phone</type>
</CustomField>