salesforce_sfdx/main/default/objects/Contact/fields/Contact_Title_1__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title_1__c</fullName>
    <label>* Contact Title (1)</label>
    <length>24</length>
    <type>Text</type>
</CustomField>