salesforce_sfdx/main/default/objects/Contact/fields/Contact_Title_5__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title_5__c</fullName>
    <label>Contact Title (5)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>