salesforce_sfdx/main/default/objects/Contact/listViews/BulkMessageContacts.listView-meta.xml
<ListView>
    <fullName>BulkMessageContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>Bulk_SMS_Contacts</label>
</ListView>