salesforce_sfdx/main/default/objects/Contact/listViews/Contractor_Contacts.listView-meta.xml
<ListView>
    <fullName>Contractor_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Participating_Contractor</value>
    </filters>
    <label>Participating Contractor Contacts</label>
</ListView>